--- a/俄罗斯方块/俄罗斯方块.vcxproj
+++ b/俄罗斯方块/俄罗斯方块.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="archieve_screen.cpp" />
+    <ClCompile Include="archive\源.cpp" />
     <ClCompile Include="display.cpp" />
     <ClCompile Include="end_screen.cpp" />
     <ClCompile Include="map_processing.cpp" />
@@ -144,6 +145,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="C++.gitignore" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
