修改了界面大小，新增了两种游戏玩法（双人模式与随机旋转模式），重构了部分代码

--- a/俄罗斯方块/俄罗斯方块.vcxproj
+++ b/俄罗斯方块/俄罗斯方块.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="display.cpp" />
     <ClCompile Include="end_screen.cpp" />
     <ClCompile Include="map_processing.cpp" />
+    <ClCompile Include="mode_screen.cpp" />
     <ClCompile Include="mouse_and_key.cpp" />
     <ClCompile Include="stop_screen.cpp" />
     <ClCompile Include="game_set.cpp" />
