--- a/俄罗斯方块/俄罗斯方块.vcxproj.filters
+++ b/俄罗斯方块/俄罗斯方块.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="map_processing.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="mode_screen.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
