新增看广告复活功能

--- a/俄罗斯方块/俄罗斯方块.vcxproj.filters
+++ b/俄罗斯方块/俄罗斯方块.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="mode_screen.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="error_screen.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ad_screen.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
